Correção de bugs e responsividade.

--- a/app/index.html
+++ b/app/index.html
@@ -5,150 +5,215 @@
     <meta charset="UTF-8">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" />
     <link rel="stylesheet" href="assets/css/app.css" />
 </head>
 <body>
     <section id="hero">
         <div id="header" class="container center-align">
-            <header>
-                <div>
-                    <img src="assets/img/logo_musicar.png" alt="Musicar - Aprenda e toque a sua música" />
+            <div class="row">
+                <div lass="col s12">
+                    <header>
+                        <div>
+                            <img src="assets/img/logo_musicar.png" alt="Musicar - Aprenda e toque a sua música" />
+                        </div>
+                        <h1 class="page-title"><span>Aprenda</span> e toque a sua <span>música</span></h1>
+                        <p class="lead lead-1">Aprender música pode e deve ser divertido e do seu jeito =) conta pra gente seu nome e e-mail e se junte a uma galera que está contando os segundos pra começar a ter aulas maneiras e fazer muito som!</p>
+                    </header>
+                    <div id="sign-up" class="z-depth-3">
+                        <form class="row">
+                            <div class="col s12 m12 l6 input">
+                                <input type="text" class="left" placeholder="Qual é o seu primeiro nome?" />
+                            </div>
+                            <div class="col s12 m12 l6 input">
+                                <input type="text" class="right" placeholder="Qual é o seu e-mail preferido?" />
+                            </div>
+                            <div class="clear col s12">
+                                <button type="submit" class="form-submit btn waves-effect waves-light amber accent-4">QUERO ME JUNTAR A GALERA!</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <h1 class="page-title"><span>Aprenda</span> e toque a sua <span>música</span></h1>
-                <p class="lead">Aprender música pode e deve ser divertido e do seu jeito =) conta pra gente seu nome e e-mail e se junte a uma galera que está contando os segundos pra começar a ter aulas maneiras e fazer muito som!</p>
-            </header>
-            <div id="sign-up">
-                <form>
-                    <div class="input">
-                        <input type="text" class="left" placeholder="Qual é o seu primeiro nome?" />
-                    </div>
-                    <div class="input">
-                        <input type="text" class="right" placeholder="Qual é o seu e-mail preferido?" />
-                    </div>
-                    <div class="submit clear">
-                        <input type="submit" class="btn waves-effect waves-light yellow accent-4" value="QUERO ME JUNTAR A GALERA!" />
-                    </div>
-                </form>
             </div>
         </div>
+        <nav id="main-menu">
+            <div class="nav-wrapper valign-wrapper menu-wrapper">
+                <a href="#" data-activates="mobile-nav" class="mobile-nav-button button-collapse"><i class="large material-icons">menu</i></a>
+                <ul class="hide-on-med-and-down valign">
+                    <li>
+                        <a href="#">Por que somos legais?</a>
+                    </li>
+                    <li>
+                        <a href="#">Como funciona?</a>
+                    </li>
+                    <li>
+                        <a href="#">Tem algum custo?</a>
+                    </li>
+                    <li>
+                        <a href="#">Quero fazer parte</a>
+                    </li>
+                </ul>
+                <ul class="side-nav valign" id="mobile-nav">
+                    <li>
+                        <img class="responsive-img" src="assets/img/logo_musicar.png">
+                    </li>
+                    <li>
+                        <a href="#">Por que somos legais?</a>
+                    </li>
+                    <li>
+                        <a href="#">Como funciona?</a>
+                    </li>
+                    <li>
+                        <a href="#">Tem algum custo?</a>
+                    </li>
+                    <li>
+                        <a href="#">Quero fazer parte</a>
+                    </li>
+                </ul>
+            </div>
+        </nav> 
     </section>
-    <nav id="main-menu" class="white valign-wrapper">
-        <ul class="valign">
-            <li>
-                <a href="#">Por que somos legais?</a>
-            </li>
-            <li>
-                <a href="#">Como funciona?</a>
-            </li>
-            <li>
-                <a href="#">Tem algum custo?</a>
-            </li>
-            <li>
-                <a href="#">Quero fazer parte</a>
-            </li>
-        </ul>
-    </nav>
     <main>
-        <section id="container-1">
-            <header>
-                <h1 class="section-title-no-bg center-align">Por que somos legais?</h1>
-            </header>
-            <main>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_find_teacher.png" alt="A gente acha exatamente o professor que você procura" />
+        <section id="container-1" class="container-section center-align">
+            <div class="container">
+                <header>
+                    <h1 class="section-title section-title-no-bg">Por que somos legais?</h1>
+                </header>
+                <main class="row featured featured-1">
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_find_teacher.png" alt="A gente acha exatamente o professor que você procura" />
+                        </div>
+                        <p>A gente acha exatamente o professor que você procura</p>
                     </div>
-                    <p>A gente acha exatamente o professor que você procura</p>
-                </div>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_no_bureaucracy.png" alt="Mensalidades, provas... Nada disso! Burocracia zero, o importante é curtir a sua música" />
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_no_bureaucracy.png" alt="Mensalidades, provas... Nada disso! Burocracia zero, o importante é curtir a sua música" />
+                        </div>
+                        <p>Mensalidades, provas... Nada disso! Burocracia zero, o importante é curtir a sua música</p>
                     </div>
-                    <p>Mensalidades, provas... Nada disso! Burocracia zero, o importante é curtir a sua música</p>
-                </div>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_your_schedule.png" alt="Você que manda na agenda! As aulas se ajustam ao seu tempo e não o contrário" />
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_your_schedule.png" alt="Você que manda na agenda! As aulas se ajustam ao seu tempo e não o contrário" />
+                        </div>
+                        <p>Você que manda na agenda! As aulas se ajustam ao seu tempo e não o contrário</p>
                     </div>
-                    <p>Você que manda na agenda! As aulas se ajustam ao seu tempo e não o contrário</p>
-                </div>
-                <a href="#" class="center-align">Tô dentro, quero fazer parte!</a>
-            </main>
+                    <div class="col s12">
+                        <a href="#" class="submit btn waves-effect waves-light amber accent-4">Tô dentro, quero fazer parte!</a>
+                    </div>
+                </main>
+            </div>
         </section>
-        <section id="container-2">
-            <header>
-                <h1 class="section-title-bg center-align">Como funciona?</h1>
-            </header>
-            <main>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_sign_up.png" alt="Faça o cadastro pelo aplicativo e preencha seu perfil pra gente te conhecer melhor" />
+        <section id="container-2" class="container-section center-align">
+            <div class="container">
+                <header>
+                    <h1 class="section-title section-title-bg">Como funciona?</h1>
+                </header>
+                <main class="row featured featured-2">
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_sign_up.png" alt="Faça o cadastro pelo aplicativo e preencha seu perfil pra gente te conhecer melhor" />
+                        </div>
+                        <p>1. Faça o cadastro pelo aplicativo e preencha seu perfil pra gente te conhecer melhor</p>
                     </div>
-                    <p>Faça o cadastro pelo aplicativo e preencha seu perfil pra gente te conhecer melhor</p>
-                </div>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_search.png" alt="Nos fale qual ou quais instrumentos que você quer aprender (ou canto) =)" />
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_search.png" alt="Nos fale qual ou quais instrumentos que você quer aprender (ou canto) =)" />
+                        </div>
+                        <p>2. Nos fale qual ou quais instrumentos você quer aprender (ou canto) =)</p>
                     </div>
-                    <p>Nos fale qual ou quais instrumentos você quer aprender (ou canto) =)</p>
-                </div>
-                <div>
-                    <div>
-                        <img src="assets/img/icon_search_results.png" alt="Pronto! A gente acha os professores, na sua região ou em qualquer outro lugar" />
+                    <div class="col s12 m4 l4">
+                        <div>
+                            <img class="responsive-img" src="assets/img/icon_search_results.png" alt="Pronto! A gente acha os professores, na sua região ou em qualquer outro lugar" />
+                        </div>
+                        <p>3. Pronto! A gente acha os professores, na sua região ou em qualquer outro lugar</p>
                     </div>
-                    <p>Pronto! A gente acha os professores, na sua região ou em qualquer outro lugar</p>
-                </div>
-                <a href="#" class="center-align">Uau, quero conhecer mais!</a>
-            </main>
+                    <div class="col s12">
+                        <a href="#" class="submit btn waves-effect waves-light amber accent-4">Uau, quero conhecer mais!</a>
+                    </div>
+                </main>
+            </div>
         </section>
-        <section id="container-3">
-            <header>
-                <h1 class="section-title-no-bg center-align">Tem algum custo?</h1>
-            </header>
-            <main class="center-align">
-                <strong>Criar uma conta e começar a usar custa:</strong>
-                <div>
-                    <img src="assets/img/zero_cost.png" alt="Nada! Eliminamos o que custa caro pra você não gastar nenhum centavo com o serviço =D" />
-                </div>
-                <p class="lead">Nada! Eliminamos o que custa caro pra você não gastar nenhum centavo com o serviço =D</p>
-                <a href="#">Adorei! Quero me cadastrar!</a>
-            </main>
-        </section>
-        <section id="container-4 center-align">
-            <header>
-                <h1 class="section-title-bg center-align">Quero fazer parte!</h1>
-            </header>
-            <main class="center-align">
-                <p class="lead">Oba! Vem com a gente e junte-se a pessoas que querem aprender música de um jeito diferente.</p>
-                <a href="#">Bora fazer música</a>
-                <aside>
-                    <p class="lead">E chama a galera nas redes sociais pra curtir seu som!</p>
-                    <div>
-                        <a href="https://facebook.com/memusicar" target="_blank">
-                            <img src="assets/img/icon_facebook.png" alt="Facebook" />
-                        </a>
-                        <a href="https://twitter.com/memusicar" target="_blank">
-                            <img src="assets/img/icon_twitter.png" alt="Twitter" />
-                        </a>
+        <section id="container-3" class="container-section center-align">
+            <div class="container">
+                <header>
+                    <h1 class="section-title section-title-no-bg center-align">Tem algum custo?</h1>
+                </header>
+                <main class="row">
+                    <strong class="lead-featured">Criar uma conta e começar a usar custa:</strong>
+                    <div class="service-cost">
+                        <img class="responsive-img" src="assets/img/zero_cost.png" alt="Nada! Eliminamos o que custa caro pra você não gastar nenhum centavo com o serviço =D" />
                     </div>
-                </aside>
-            </main>
-            <footer class="center-align">
-                <div>
-                    <a href="#" target="_blank">
-                        <img src="assets/img/logo_expomusic.png" alt="Expo Music 2016" />
-                    </a>
-                    <a href="#" target="_blank">
-                        <img src="assets/img/logo_wingsup.png" alt="Wings Up" />
-                    </a>
-                    <a href="#" target="_blank">
-                        <img src="assets/img/logo_santo_angelo.png" alt="Santo Angelo" />
-                    </a>
+                    <p class="lead lead-2">Nada! Eliminamos o que custa caro pra você não gastar nenhum centavo com o serviço =D</p>
+                    <div class="col s12">
+                        <a href="#" class="submit btn waves-effect waves-light amber accent-4">Adorei! Quero me cadastrar!</a>
+                    </div>
+                </main>
+            </div>
+        </section>
+        <section id="container-4" class="container-section center-align">
+            <div class="container">
+                <header>
+                    <h1 class="section-title section-title-bg">Quero fazer parte!</h1>
+                </header>
+                <main class="row">
+                    <p class="lead lead-1">Oba! Vem com a gente e junte-se a pessoas que querem aprender música de um jeito diferente.</p>
+                    <div class="col s12">
+                        <a href="#" class="submit submit-block btn waves-effect waves-light blue accent-2">Bora fazer música</a>
+                    </div>
+                    <aside>
+                        <p class="lead lead-1">E chama a galera nas redes sociais pra curtir seu som!</p>
+                        <div id="social-media">
+                            <a href="https://facebook.com/memusicar" target="_blank">
+                                <img class="responsive-img" src="assets/img/icon_facebook.png" alt="Facebook" />
+                            </a>
+                            <a href="https://twitter.com/memusicar" target="_blank">
+                                <img class="responsive-img" src="assets/img/icon_twitter.png" alt="Twitter" />
+                            </a>
+                        </div>
+                    </aside>
+                </main>
+                <div id="footer-separator" class="z-depth-1"></div>
+            </div>
+            <footer id="footer" class="center-align">
+                <div class="container">
+                    <div id="partners" class="row">
+                        <div class="col s12 m4 l4">
+                            <a href="http://www.expomusic.com.br/2016/" target="_blank">
+                                <img class="responsive-img" src="assets/img/logo_expomusic.png" alt="Expo Music 2016" />
+                            </a>
+                        </div>
+                        <div class="col s12 m4 l4">
+                            <a href="http://wingsup.com.br/" target="_blank">
+                                <img class="responsive-img" src="assets/img/logo_wingsup.png" alt="Wings Up" />
+                            </a>
+                        </div>
+                        <div class="col s12 m4 l4">
+                            <a href="http://www.santoangelo.com.br/" target="_blank">
+                                <img class="responsive-img" src="assets/img/logo_santo_angelo.png" alt="Santo Angelo" />
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </footer>
         </section>
     </main>
+    <div class="site-loader preloader-wrapper big active">
+        <div class="spinner-layer spinner-blue-only">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
