Habilitação dos menus.

--- a/app/index.html
+++ b/app/index.html
@@ -43,16 +43,16 @@
                 <a href="#" data-activates="mobile-nav" class="mobile-nav-button button-collapse"><i class="large material-icons">menu</i></a>
                 <ul class="hide-on-med-and-down valign">
                     <li>
-                        <a href="#">Por que somos legais?</a>
+                        <a href="#why-us">Por que somos legais?</a>
                     </li>
                     <li>
-                        <a href="#">Como funciona?</a>
+                        <a href="#how-it-works">Como funciona?</a>
                     </li>
                     <li>
-                        <a href="#">Tem algum custo?</a>
+                        <a href="#how-much-does-it-cost">Tem algum custo?</a>
                     </li>
                     <li>
-                        <a href="#">Quero fazer parte</a>
+                        <a href="#i-want">Quero fazer parte</a>
                     </li>
                 </ul>
                 <ul class="side-nav valign" id="mobile-nav">
@@ -60,16 +60,16 @@
                         <img class="responsive-img" src="assets/img/logo_musicar.png">
                     </li>
                     <li>
-                        <a href="#">Por que somos legais?</a>
+                        <a href="#why-us">Por que somos legais?</a>
                     </li>
                     <li>
-                        <a href="#">Como funciona?</a>
+                        <a href="#how-it-works">Como funciona?</a>
                     </li>
                     <li>
-                        <a href="#">Tem algum custo?</a>
+                        <a href="#how-much-does-it-cost">Tem algum custo?</a>
                     </li>
                     <li>
-                        <a href="#">Quero fazer parte</a>
+                        <a href="#i-want">Quero fazer parte</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
         <section id="container-1" class="container-section center-align">
             <div class="container">
                 <header>
-                    <h1 class="section-title section-title-no-bg">Por que somos legais?</h1>
+                    <h1 class="section-title section-title-no-bg" id="why-us">Por que somos legais?</h1>
                 </header>
                 <main class="row featured featured-1">
                     <div class="col s12 m4 l4">
@@ -109,7 +109,7 @@
         <section id="container-2" class="container-section center-align">
             <div class="container">
                 <header>
-                    <h1 class="section-title section-title-bg">Como funciona?</h1>
+                    <h1 class="section-title section-title-bg" id="how-it-works">Como funciona?</h1>
                 </header>
                 <main class="row featured featured-2">
                     <div class="col s12 m4 l4">
@@ -139,7 +139,7 @@
         <section id="container-3" class="container-section center-align">
             <div class="container">
                 <header>
-                    <h1 class="section-title section-title-no-bg center-align">Tem algum custo?</h1>
+                    <h1 class="section-title section-title-no-bg center-align" id="how-much-does-it-cost">Tem algum custo?</h1>
                 </header>
                 <main class="row">
                     <strong class="lead-featured">Criar uma conta e começar a usar custa:</strong>
@@ -156,7 +156,7 @@
         <section id="container-4" class="container-section center-align">
             <div class="container">
                 <header>
-                    <h1 class="section-title section-title-bg">Quero fazer parte!</h1>
+                    <h1 class="section-title section-title-bg" id="i-want">Quero fazer parte!</h1>
                 </header>
                 <main class="row">
                     <p class="lead lead-1">Oba! Vem com a gente e junte-se a pessoas que querem aprender música de um jeito diferente.</p>
