robots.txt e meta tags adicionadas na index.

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,14 @@
 <head>
     <title>Musicar - Aprenda e toque a sua música</title>
     <meta charset="UTF-8">
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta Name="robots" content="index, follow" />
+    <meta http-equiv="cache-control" content="public" />
+    <meta http-equiv="Pragma" content="public">
+    <meta name="revisit-after" content="1 days" />
+    <link rel="canonical" href="http://memusicar.com.br/" />
+    <meta name="author" content="freitashenriquesouza@gmail.com" />
+    <meta name="rating" content="general" />
+    <meta name="keywords" content="musica, memusicar, professor particular, app, aplicativo, aprender musica, violao, guitarra, instrumentos musicais, piano, teclado, som" />
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" />
