Inclusão das URLs para tracking de clicks nos parceiros.

--- a/app/index.html
+++ b/app/index.html
@@ -187,17 +187,17 @@
                 <div class="container">
                     <div id="partners" class="row">
                         <div class="col s12 m4 l4">
-                            <a href="http://www.expomusic.com.br/2016/" target="_blank">
+                            <a href="http://www.expomusic.com.br/2016/?utm_source=Musicar&utm_medium=Site&utm_campaign=Brand" target="_blank">
                                 <img class="responsive-img" src="assets/img/logo_expomusic.png" alt="Expo Music 2016" />
                             </a>
                         </div>
                         <div class="col s12 m4 l4">
-                            <a href="http://wingsup.com.br/" target="_blank">
+                            <a href="http://wingsup.com.br/?utm_source=Musicar&utm_medium=Site&utm_campaign=Brand" target="_blank">
                                 <img class="responsive-img" src="assets/img/logo_wingsup.png" alt="Wings Up" />
                             </a>
                         </div>
                         <div class="col s12 m4 l4">
-                            <a href="http://www.santoangelo.com.br/" target="_blank">
+                            <a href="http://www.santoangelo.com.br/?utm_source=Musicar&utm_medium=Site&utm_campaign=Brand" target="_blank">
                                 <img class="responsive-img" src="assets/img/logo_santo_angelo.png" alt="Santo Angelo" />
                             </a>
                         </div>
