Workaround pro form enquanto a integração com o Mailchimp não fica pronta

--- a/app/index.html
+++ b/app/index.html
@@ -27,17 +27,18 @@
                         </div>
                         <h1 class="page-title"><span>Aprenda</span> e toque a sua <span>música</span></h1>
                         <p class="lead lead-1">Aprender música pode e deve ser divertido e do seu jeito =) conta pra gente seu nome e e-mail e se junte a uma galera que está contando os segundos pra começar a ter aulas maneiras e fazer muito som!</p>
+                        <p class="lead lead-1">Nos dê mais um tempinho e já liberamos o form pra cadastro. Respira fundo! =)</p>
                     </header>
                     <div id="sign-up" class="z-depth-3">
                         <form class="row">
                             <div class="col s12 m12 l6 input">
-                                <input type="text" class="left" placeholder="Qual é o seu primeiro nome?" />
+                                <input type="text" class="left" placeholder="Qual é o seu primeiro nome?" disabled />
                             </div>
                             <div class="col s12 m12 l6 input">
-                                <input type="text" class="right" placeholder="Qual é o seu e-mail preferido?" />
+                                <input type="text" class="right" placeholder="Qual é o seu e-mail preferido?" disabled />
                             </div>
                             <div class="clear col s12">
-                                <button type="submit" class="form-submit btn waves-effect waves-light amber accent-4">QUERO ME JUNTAR A GALERA!</button>
+                                <button type="submit" class="form-submit btn waves-effect waves-light amber accent-4" disabled>QUERO ME JUNTAR A GALERA!</button>
                             </div>
                         </form>
                     </div>
