Correção no loader e redirecionamento do botão do call to action no fim da página para o form.

--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,7 @@
                 <main class="row">
                     <p class="lead lead-1">Oba! Vem com a gente e junte-se a pessoas que querem aprender música de um jeito diferente.</p>
                     <div class="col s12">
-                        <a href="#" class="submit submit-block btn waves-effect waves-light blue accent-2">Bora fazer música</a>
+                        <a href="#sign-up" class="submit submit-block btn waves-effect waves-light blue accent-2">Bora fazer música</a>
                     </div>
                     <aside>
                         <p class="lead lead-1">E chama a galera nas redes sociais pra curtir seu som!</p>
