--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" />
+    
     <link rel="stylesheet" href="assets/css/app.css" />
 </head>
 <body>
@@ -45,7 +46,7 @@
                             <p class="lead lead-1">Nos dê mais um tempinho e já liberamos o form pra cadastro. Respira fundo! =)</p>
                         </header>
                         <div id="sign-up" class="z-depth-3">
-                            <form action="http://musicatura.us12.list-manage.com/subscribe/post?u=d325a762bced07b26a5ef85d1&amp;id=d63198ab66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate row">
+                            <form action="http://musicatura.us12.list-manage.com/subscribe/post?u=d325a762bced07b26a5ef85d1&amp;id=d63198ab66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate row" novalidate>
                                 <div class="col s12 m12 l6 input">
                                     <input type="text" name="FNAME" class="left required" placeholder="Qual é o seu primeiro nome?" />
                                 </div>
@@ -57,6 +58,10 @@
                                     <button type="submit" class="form-submit btn waves-effect waves-light amber accent-4" id="mc-embedded-subscribe">QUERO ME JUNTAR A GALERA!</button>
                                 </div>
                             </form>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -226,7 +231,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script src="http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script src="assets/js/validate.js"></script>
     <script src="assets/js/app.js"></script>
     <script>
