Correção de bug na validação com Javascript.

--- a/app/index.html
+++ b/app/index.html
@@ -47,14 +47,14 @@
                         </header>
                         <div id="sign-up" class="z-depth-3">
                             <form action="http://musicatura.us12.list-manage.com/subscribe/post?u=d325a762bced07b26a5ef85d1&amp;id=d63198ab66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate row" novalidate>
-                                <div class="col s12 m12 l6 input">
+                                <div class="col s12 m12 l6 input mc-field-group">
                                     <input type="text" name="FNAME" class="left required" placeholder="Qual é o seu primeiro nome?" />
                                 </div>
-                                <div class="col s12 m12 l6 input">
+                                <div class="col s12 m12 l6 input mc-field-group">
                                     <input type="text" name="EMAIL" class="right required" placeholder="Qual é o seu e-mail preferido?" />
                                 </div>
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d325a762bced07b26a5ef85d1_d63198ab66" tabindex="-1" value=""></div>
-                                <div class="clear col s12">
+                                <div class="clear col s12 mc-field-group">
                                     <button type="submit" class="form-submit btn waves-effect waves-light amber accent-4" id="mc-embedded-subscribe">QUERO ME JUNTAR A GALERA!</button>
                                 </div>
                             </form>
